example/fail/fail_type13.dl

int $[main]{ //missing semicolon
   1+2
    
}

